--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,8 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           source: "dist/*"
           target: "/var/www/web/dist"
+          recursive: true
+          rm: true
 
       - name: 🔄 Reload Nginx
         uses: appleboy/ssh-action@v0.1.7
