latests work flow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,16 +24,19 @@ jobs:
       - name: 🏗️ Build project
         run: npm run build
 
+      - name: 🧾 Check build output
+        run: ls -l dist
+
       - name: 🚢 Deploy build to VPS
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          source: "dist/*"
-          target: "/var/www/web/dist"
-          recursive: true
-          rm: true
+          source: "dist/"
+          target: "/var/www/web/"
+
+
 
       - name: 🔄 Reload Nginx
         uses: appleboy/ssh-action@v0.1.7
