--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,10 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          source: "dist/"
+          source: "dist/*"
           target: "/var/www/web/"
-
+          recursive: true
+          rm: true
 
 
       - name: 🔄 Reload Nginx
