--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,9 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           source: "dist/*"
-          target: "/var/www/web/"
-          recursive: true
+          target: "/var/www/web/app"
           rm: true
+
 
 
       - name: 🔄 Reload Nginx
